[package]
name = "polymarket-rtds"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust client for Polymarket's Real-Time Data Streaming WebSocket service"
homepage = "https://github.com/Rimantovas/polymarket-rtds"
repository = "https://github.com/Rimantovas/polymarket-rtds"
readme = "README.md"
keywords = ["polymarket", "websocket"]

[features]
default = ["native-tls"]
native-tls = ["tokio-tungstenite/native-tls"]
native-tls-vendored = ["tokio-tungstenite/native-tls-vendored"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]

[dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = { version = "0.28" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
url = "2.5"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "crypto_price_monitor"
path = "examples/crypto_price_monitor.rs"
